dataset1235/2025-2/1153765216/users/416059210/executions/2372395858_3833385198.log
== SUBMISSION (2025-08-28 19:18:40)
-- CODE: 
kwh = float(input())
total = input((kwh + 10)  * (25/100))
print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
---- correct output:
66.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total = input((kwh + 10)  * (25/100))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
45.28
---- correct output:
36.84
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total = input((kwh + 10)  * (25/100))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
16.58
---- correct output:
21.41
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total = input((kwh + 10)  * (25/100))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
289.45
---- correct output:
168.08
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total = input((kwh + 10)  * (25/100))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
284.14
---- correct output:
165.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total = input((kwh + 10)  * (25/100))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
450.35
---- correct output:
254.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total = input((kwh + 10)  * (25/100))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 19:12:38)
-- CODE: 
kwh = float(input())
total = input(kwh * (25/100)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
---- correct output:
66.25
-- ERROR:
File "XXXX", line 2
    total = input(kwh * (25/100)
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
45.28
---- correct output:
36.84
-- ERROR:
File "XXXX", line 2
    total = input(kwh * (25/100)
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
16.58
---- correct output:
21.41
-- ERROR:
File "XXXX", line 2
    total = input(kwh * (25/100)
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
289.45
---- correct output:
168.08
-- ERROR:
File "XXXX", line 2
    total = input(kwh * (25/100)
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
284.14
---- correct output:
165.23
-- ERROR:
File "XXXX", line 2
    total = input(kwh * (25/100)
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
450.35
---- correct output:
254.56
-- ERROR:
File "XXXX", line 2
    total = input(kwh * (25/100)
                 ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 19:28:21)
-- CODE: 
kwh = float(input())
total = input((kwh + 10)  * (25/100))
print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
---- correct output:
66.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total = input((kwh + 10)  * (25/100))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
45.28
---- correct output:
36.84
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total = input((kwh + 10)  * (25/100))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
16.58
---- correct output:
21.41
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total = input((kwh + 10)  * (25/100))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
289.45
---- correct output:
168.08
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total = input((kwh + 10)  * (25/100))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
284.14
---- correct output:
165.23
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total = input((kwh + 10)  * (25/100))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 6:
---- input:
450.35
---- correct output:
254.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total = input((kwh + 10)  * (25/100))
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
EOFError: EOF when reading a line
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 19:12:37)
-- CODE: 
kwh = float(input())
total = input(kwh * (25/100)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
---- correct output:
66.25
-- ERROR:
File "XXXX", line 2
    total = input(kwh * (25/100)
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
45.28
---- correct output:
36.84
-- ERROR:
File "XXXX", line 2
    total = input(kwh * (25/100)
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
16.58
---- correct output:
21.41
-- ERROR:
File "XXXX", line 2
    total = input(kwh * (25/100)
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
289.45
---- correct output:
168.08
-- ERROR:
File "XXXX", line 2
    total = input(kwh * (25/100)
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
284.14
---- correct output:
165.23
-- ERROR:
File "XXXX", line 2
    total = input(kwh * (25/100)
                 ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
450.35
---- correct output:
254.56
-- ERROR:
File "XXXX", line 2
    total = input(kwh * (25/100)
                 ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-28 19:18:17)
-- CODE: 
kwh = float(input())
total = int((kwh + 10)  * (25/100))
print(round(total,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
---- correct output:
66.25
---- user output:
27
-- TEST CASE 2:
---- input:
45.28
---- correct output:
36.84
---- user output:
13
-- TEST CASE 3:
---- input:
16.58
---- correct output:
21.41
---- user output:
6
-- TEST CASE 4:
---- input:
289.45
---- correct output:
168.08
---- user output:
74
-- TEST CASE 5:
---- input:
284.14
---- correct output:
165.23
---- user output:
73
-- TEST CASE 6:
---- input:
450.35
---- correct output:
254.56
---- user output:
115
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
